tests/snapshots/ui_snapshots__binary_info_pdf.snap
---
source: tests/ui_snapshots.rs
assertion_line: 579
expression: output
---
 reef  [TMPDIR]  ⎇ (detached)
 📁  Files │ 🔎  Search │ ⎇ Git │ ⑂ Graph        ⊟  1:Files 2:Search 3:Git 4:Graph
 +   📁    ↻   ⊟        │ doc.pdf
   doc.pdf U           │ ──────────────────────────────────────────────────────
                       │ application/pdf · 14 B
                       │
                       │
                       │
                       │
                       │
                       │
                       │
                       │                      binary file
                       │
                       │
                       │
                       │
                       │
                       │
 🔗  SSH        ⚙  q:quit Tab:switch s:stage u:unstage r:refresh h:help  [Files]
