tests/snapshots/ui_snapshots__empty_repo.snap
---
source: tests/ui_snapshots.rs
assertion_line: 86
expression: output
---
 reef  [TMPDIR]  ⎇ (detached)
 📁  Files │ ⎇ Git │ ⑂ Graph                                1:Files 2:Git 3:Graph
 (empty)               │
                       │
                       │
                       │
                       │
                       │
                       │
                       │
                       │                  Select a file to preview
                       │
                       │
                       │
                       │
                       │
                       │
                       │
                       │
                     q:quit Tab:switch s:stage u:unstage r:refresh h:help
