tests/snapshots/ui_snapshots__hosts_picker_path_mode.snap
---
source: tests/ui_snapshots.rs
assertion_line: 417
expression: output
---
 reef  [TMPDIR]  ⎇ (detached)
 📁  Files │ 🔎  Search │ ⎇ Git │ ⑂ Graph        ⊟  1:Files 2:Search 3:Git 4:Graph
 +   📁  Connect to · [user@]host[:path] ─────────────────────────────────┐
 (empt│ ➜ root@47.101.167.85:/tmp/work                                   │
      │ ──────────────────────────────────────────────────────────────── │
      │  hongxuan  root@47.101.167.85                                    │
      │                                                                  │
      │                                                                  │
      │                                                                  │
      │                                                                  │
      │                                                                  │
      │                                                                  │
      │                                                                  │
      │                                                                  │
      │                                                                  │
      │                                                                  │
      │   Enter connect · Esc back to filter                             │
      └──────────────────────────────────────────────────────────────────┘
                       │
                  q:quit Tab:switch s:stage u:unstage r:refresh h:help  [Files]
