tests/snapshots/ui_snapshots__image_preview_halfblocks.snap
---
source: tests/ui_snapshots.rs
assertion_line: 540
expression: output
---
 reef  [TMPDIR]  ⎇ (detached)
 📁  Files │ 🔎  Search │ ⎇ Git │ ⑂ Graph        ⊟  1:Files 2:Search 3:Git 4:Graph
 +   📁    ↻   ⊟        │ striped.png
   striped.png U       │ ──────────────────────────────────────────────────────
                       │ 40×40 · PNG · 257 B
                       │
                       │ ▄▄▄▄
                       │ ▄▄▄▄
                       │
                       │
                       │
                       │
                       │
                       │
                       │
                       │
                       │
                       │
                       │
 🔗  SSH        ⚙  q:quit Tab:switch s:stage u:unstage r:refresh h:help  [Files]
