tests/snapshots/ui_snapshots__markdown_preview.snap
---
source: tests/ui_snapshots.rs
expression: output
---
 reef  [TMPDIR]  ⎇ (detached)
 📁  Files │ 🔎  Search │ ⎇ Git │ ⑂ Graph        ⊟  1:Files 2:Search 3:Git 4:Graph
 +   📁    ↻   ⊟        │ README.md
   README.md U         │ ──────────────────────────────────────────────────────
                       │ Markdown Preview
                       │
                       │  rs
                       │
                       │   fn main() {}
                       │
                       │
                       │ ┏━━━━━━┳━━━━━━━┓
                       │ ┃ Name ┃ Count ┃
                       │ ┣━━━━━━╋━━━━━━━┫
                       │ ┃ reef ┃    12 ┃
                       │ ┗━━━━━━┻━━━━━━━┛
                       │
                       │
                       │
 🔗  SSH        ⚙  q:quit Tab:switch s:stage u:unstage r:refresh h:help  [Files]
