tests/snapshots/ui_snapshots__settings_page_default.snap
---
source: tests/ui_snapshots.rs
assertion_line: 652
expression: output
---
┌ ⚙ Settings ──────────────────────────────────────────────────────────────────┐
│                                                                              │
│  GENERAL                                                                     │
│   › Theme                                    [auto]                          │
│                                                                              │
│  EXTERNAL EDITOR                                                             │
│     Editor command                           (unset — uses $VISUAL / $EDITO  │
│                                                                              │
│  GIT DIFF                                                                    │
│     Diff layout                              [unified]                       │
│     Diff mode                                [compact]                       │
│     Status sidebar — tree view               [off]                           │
│                                                                              │
│  COMMIT DETAIL                                                               │
│     Commit diff layout                       [unified]                       │
│     Commit diff mode                         [compact]                       │
│     Commit files — tree view                 [off]                           │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│    auto detects terminal background; pick dark / light to override (takes e  │
│    ↑↓ select · Enter toggle/edit · Esc back                                  │
└──────────────────────────────────────────────────────────────────────────────┘
